<resources>
    <string name="app_name">SIFAA</string>
    <string name="app_version_number">1.0.0</string>
    <string name="detector">Disease Detector</string>
    <string name="select_photo_from_gallery">Select from Gallery</string>
    <string name="take_picture_with_camera">Capture Image</string>
    <string name="prediction_result">Prediction Result</string>
    <string name="smart_detector">Smart detector</string>
    <string name="title_activity_maps">Map</string>

    <string name="guidance">Guidance</string>

    <string name="flower_categories">Flower Categories</string>
    <string name="sunflower">Sunflowers</string>
    <string name="lilies_flower">Lilies</string>
    <string name="iris_flower">Iris</string>
    <string name="tulip_flower">Tulips</string>
    <string name="poppy_flower">Poppies</string>
    <string name="cookies">Cookies</string>
    <string name="menu_icon">Menu Icon</string>
    <string name="roses_flower">Roses</string>
    <string name="here_s_what_i_found_for_you">Here\'s what I found for you</string>
    <string name="here_s_what_i_rec_for_you">Here\'s what I recommend for you</string>
    <string name="here_s_what_fav_for_you">Previously purchased Flowers</string>
    <string name="show_all">Show all</string>
    <string name="carnation_flower">Carnations</string>
    <string name="short_flower_description">Short Description</string>
    <string name="item_name">Item Name</string>
    <string name="default_rs">Rs 0.00</string>
    <string name="default_quantity">0</string>
    <string name="place_order">Place Order</string>
    <string name="your_order_default_items">Your Order (0 items)</string>
    <string name="your_order">Your Order</string>
    <string name="order_details">Order details</string>
    <string name="total_price">Total Price</string>
    <string name="tax">Tax</string>
    <string name="sub_total">Sub-total</string>
    <string name="time_for_take_away_of_order">Time for take-away of order</string>
    <string name="change_time">Change Time</string>
    <string name="proceed_to_pay">Proceed to Pay</string>
    <string name="create_account">Create Account</string>
    <string name="watch_your_flower">SIFAA Agent</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="hi">Hi</string>
    <string name="name">Name</string>
    <string name="your_id_card">Your ID Card</string>
    <string name="field_empty">Field can\'t be empty</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="invalid_mobile_no">Invalid Mobile Number</string>
    <string name="already_have_a_account">Already have a Account?</string>
    <string name="login">Login</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="full_name">Full Name</string>
    <string name="e_mail">E-mail</string>
    <string name="company_organization">Company / Organization</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_password">Create Password</string>
    <string name="employee_id">Employee ID</string>
    <string name="employee_id_card">Employee ID Card</string>
    <string name="upload">Upload</string>
    <string name="i_agree_to_the_terms_conditions"><![CDATA[I agree to the Terms & Conditions]]></string>
    <string name="preview">Preview</string>
    <string name="register">Register</string>
    <string name="preview_details">Preview Details</string>
    <string name="gender">Gender</string>
    <string name="select_your_gender">Select your Gender</string>
    <string name="save">Save</string>
    <string name="payment_method">Payment Method</string>
    <string name="cash_payment">Cash Payment</string>
    <string name="saved_cards">Saved Cards</string>
    <string name="credit_or_debit_card">Credit or Debit Card</string>
    <string name="bhim_upi">BHIM UPI</string>
    <string name="net_banking">Net Banking</string>
    <string name="confirm_payment">Confirm Payment</string>
    <string name="wallets">Wallets</string>
    <string name="pay_securely">Pay Securely</string>
    <string name="card_number">Card Number</string>
    <string name="card_holder_name">Card Holder Name</string>
    <string name="expiry_validity_date">Expiry / Validity Date</string>
    <string name="cvv">CVV</string>
    <string name="order_successful">Order Successful</string>
    <string name="payment">Payment</string>
    <string name="date">DATE</string>
    <string name="total_amount">Total Amount</string>
    <string name="done">Done</string>
    <string name="rupee">Rs. </string>
    <string name="order_take_away_time">Order Take-away Time</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="loadings">Loading…</string>
    <string name="enter_your_upi_id">Enter your UPI ID</string>
    <string name="username_bank">username@bank</string>
    <string name="default_order_id">Order ID: CA124432</string>
    <string name="default_date_and_time">Jan 01, 2021 at 11:14 AM</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="don_t_have_a_account">Don\'t have a account?</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="next">Next</string>
    <string name="full_details">Full Details</string>
    <string name="sifaa_reg_id">Sifaa Reg ID</string>
    <string name="reg_date">Reg Date</string>
    <string name="choose_image">Choose Image</string>
    <string name="description">Description</string>
    <string name="orders_history">Orders History</string>
    <string name="purchased_history">Pchased History</string>
    <string name="my_favourites">My Favourites</string>
    <string name="ok">OK</string>
    <string name="my_orders">My Orders</string>
    <string name="need_help_contact_us">Need Help? Contact Us</string>
    <string name="seems_like_you_have_not_ordered_anything">Seems like you have not ordered anything !</string>
    <string name="nothing_in_your_order_history">Nothing in your Order History</string>
    <string name="pay">Pay</string>
    <string name="save_this_card_for_up_payments">Save this card for your future payments</string>
    <string name="mm_yy">MM/YY</string>
    <string name="saved_details">Saved Details</string>
    <string name="sifaa_main">SIFAA Home</string>
    <string name="account">Account</string>
    <string name="profile">Profile</string>
    <string name="update_shop">Update Shop</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="demand">Demand Forecast</string>
    <string name="remove_all_the_previous_orders_details">Remove all the previous orders details</string>
    <string name="delete_orders_history">Delete Orders History</string>
    <string name="developer">Developer</string>
    <string name="app_version">App Version</string>
    <string name="about">About</string>
    <string name="developer_name">Sliit Students</string>
    <string name="remove_all_the_saved_cards">Remove all the saved cards</string>
    <string name="delete_saved_cards">Delete Saved Cards</string>
    <string name="delete_all_the_menu_items_from_offline_data">Delete all the menu items from offline data</string>
    <string name="delete_menu">Delete Menu</string>
    <string name="update_the_latest_flower_shop_for_offline">Update the latest Flower Shop for offline</string>
    <string name="offline">Offline</string>
    <string name="menu_mode">Menu Mode</string>
    <string name="on">On</string>
    <string name="load_item_images">Load Item Images</string>
    <string name="data_saving">Data Saving</string>
    <string name="support">Support</string>
    <string name="share_app">Share App</string>
    <string name="report_bug">Report Bug</string>
    <string name="contact_us">Contact Us</string>
    <string name="message">Message</string>
    <string name="report_problems">Any Problems ?</string>
    <string name="call">Call</string>
    <string name="mail">Mail</string>
    <string name="bougainvilla_flower">Bougainvilleas</string>
    <string name="xxx">XXX</string>
    <string name="default_card_number">2334 xxxx xxxx 6335</string>
    <string name="default_date">09/23</string>
    <string name="hello">Hello!</string>
    <string name="show_this_qr_code_to_your_flower_shop">Show this QR Code to your area Flower Shop</string>
    <string name="take_survey">Take Survey</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="selected_item">Selected item:</string>

    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>
    <string name="update">update</string>
    <string name="find_user_s_location">find_user_s_location</string>

    <string name="disease_detector">Disease Detector</string>
    <string name="disease_detector_hint">Capture an image to identify flower disease in detector. Check available diseases and flowers at anytime</string>
    <string name="insects">Insects</string>
    <string name="flowers">Flowers</string>
    <string name="disease">Diseases</string>
    <string name="detector_label">Detector</string>
    <string name="insect_info">Minute, slender insect with fringed wings.</string>
    <string name="insect_thrips">Thrips</string>
    <string-array name="Languages">
        <item>Show all</item>
        <item>Sort by price</item>
        <item>Sort by ratings</item>
        <item>Type</item>
    </string-array>
    <!--    <string name="normal_map">Normal Map</string>-->
    <!--    <string name="hybrid_map">Hybrid Map</string>-->
    <!--    <string name="satellite_map">Satellite Map</string>-->
    <!--    <string name="terrain_map">Terrain Map</string>-->
    <!--    <string name="lat_long_snippet">Lat: %1$.5f, Long: %2$.5f</string>-->
    <!--    <string name="dropped_pin">Dropped Pin</string>-->
    <!--    <string name="poi">poi</string>-->
    <string name="location_list">Location List</string>
</resources>