<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/nav_part_0"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_flower_shop"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/sifaa_main"
            android:checked="true"/>
        <item
            android:id="@+id/detector"
            android:checked="false"
            android:icon="@drawable/ic_user"
            android:title="@string/detector" />
        <item
            android:id="@+id/sifaabot"
            android:checked="false"
            android:icon="@drawable/crop_image_menu_flip"
            android:title="Ask From Bot" />
        <item
            android:id="@+id/pathDraw"
            android:checked="false"
            android:icon="@android:drawable/ic_menu_mapmode"
            android:title="Location list" />
    </group>

    <group
        android:id="@+id/nav_part_1"
        android:checkableBehavior="single">
        <item android:title="@string/account">
            <menu>
                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/ic_user"
                    android:title="@string/profile"/>
                <item
                    android:id="@+id/nav_my_orders"
                    android:icon="@drawable/ic_my_orders"
                    android:title="@string/my_orders"/>
                <item
                    android:id="@+id/nav_orders_history"
                    android:icon="@drawable/ic_order_history"
                    android:title="@string/orders_history"/>
                <item
                    android:id="@+id/nav_purchased_history"
                    android:icon="@drawable/ic_baseline_shopping_bag_24"
                    android:title="@string/purchased_history"/>
            </menu>
        </item>
    </group>

    <group
        android:id="@+id/nav_part_2"
        android:checkableBehavior="single">
        <item android:title="@string/support">
            <menu>
                <item
                    android:id="@+id/nav_share_app"
                    android:icon="@drawable/ic_share"
                    android:title="@string/share_app"/>

                <item
                    android:id="@+id/nav_contact_us"
                    android:icon="@drawable/ic_sifaa_mobile"
                    android:title="@string/contact_us"/>
            </menu>
        </item>
    </group>

    <group
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_update_shop"
            android:icon="@drawable/ic_update"
            android:title="@string/update_shop"/>
        <item
            android:id="@+id/nav_maps"
            android:icon="@drawable/ic_baseline_map_24"
            android:title="Map"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_sifaa_settings"
            android:title="@string/settings"/>
    </group>

    <group
        android:id="@+id/nav_part_4"
        android:checkableBehavior="none">
        <item
            android:id="@+id/dForecast"
            android:icon="@drawable/ic_baseline_bar_chart_24"
            android:title="@string/demand"/>
        <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/ic_log_out"
            android:title="@string/log_out"/>

    </group>

</menu>